--- a/blog/application/view/index.html
+++ b/blog/application/view/index.html
@@ -9,12 +9,11 @@
             padding:0;margin:0;
             font-size:14px;
             font: 14px/2 AvenirNext-Regular, "proxima-nova", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", "Open Sans", "Helvetica Neue", Arial, sans-serif;
-            color:#f7f7f7;
-            background:#000;
+            color:#000;
+            background:#fff;
             -webkit-font-smoothing:antialiased;
         }
         #main {
-            background:#404040;
             width:960px;
             height:96%;
             margin:10px auto;
@@ -24,7 +23,7 @@
             padding:5px;
         }
         #table_command_line {
-            border-bottom:1px solid #fff;
+            border:1px solid #000;
             width:100%;
             height:100%;
         }
@@ -40,6 +39,20 @@
     <body>
         <table id="main" border=0 cellpadding="0" cellspacing="0">
             <tr>
+                <td align="center" valign="bottom" height="30">
+
+                    <table id="table_command_line" border="0" cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td width="30" align="center">&gt;</td>
+                            <td>
+                                <div id="command_line" contenteditable="true" onkeydown="enterIn(this, event);"></div>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr><td height="30"></td></tr>
+            <tr>
                 <td align="center" valign="middle" height="30">
                 <div id="prev_command_line"></div>
                 </td>
@@ -54,19 +67,6 @@
                         命令行输入框在底部，输入 cat /blog/o/help 试试看？
                         <br />
                     </center>
-                </td>
-            </tr>
-            <tr>
-                <td align="center" valign="bottom" height="30">
-
-                    <table id="table_command_line" border="0" cellpadding="0" cellspacing="0">
-                        <tr>
-                            <td width="30" align="center">&gt;</td>
-                            <td>
-                                <div id="command_line" contenteditable="true" onkeydown="enterIn(this, event);"></div>
-                            </td>
-                        </tr>
-                    </table>
                 </td>
             </tr>
         </div>
@@ -109,7 +109,7 @@
                     doc_opera.innerHTML = ret.data;
                 } 
                 else {
-                    alert('测试失败');
+                    alert('访问失败');
                 }
                 requesting = 0;
                 doc_command_line.innerHTML = '';
