--- a/blog/application/view/index.html
+++ b/blog/application/view/index.html
@@ -1,150 +1,108 @@
-<!doctype html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+"http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
-        <meta charset="utf-8">
-    </head>
-    <style>
-        html,body {
-            height:100%;width:100%;
-            padding:0;margin:0;
-            font-size:14px;
-            font: 14px/2 AvenirNext-Regular, "proxima-nova", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", "Open Sans", "Helvetica Neue", Arial, sans-serif;
-            color:#000;
-            background:#fff;
-            -webkit-font-smoothing:antialiased;
-        }
-        #main {
-            width:960px;
-            height:96%;
-            margin:10px auto;
-            padding:3px;
-        }
-        #opera {
-            padding:5px;
-        }
-        #table_command_line {
-            border:1px solid #000;
-            width:100%;
-            height:100%;
-        }
-        #command_line {
-            outline:none;
-            margin:0 auto;
-            text-align:left;
-        }
-        p {
-            margin:0;
-        }
-    </style>
-    <body>
-        <table id="main" border=0 cellpadding="0" cellspacing="0">
-            <tr>
-                <td align="center" valign="bottom" height="30">
-
-                    <table id="table_command_line" border="0" cellpadding="0" cellspacing="0">
-                        <tr>
-                            <td width="30" align="center">&gt;</td>
-                            <td>
-                                <div id="command_line" contenteditable="true" onkeydown="enterIn(this, event);"></div>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-            <tr><td height="30"></td></tr>
-            <tr>
-                <td align="center" valign="middle" height="30">
-                <div id="prev_command_line"></div>
-                </td>
-            </tr>
-            <tr>
-                <td valign="top" id="opera">
-                    <center>
-                        终端游戏
-                        <br />
-                        使用命令行来访问一些网站，或使用一些互联网服务；
-                        <br />
-                        命令行输入框在底部，输入 cat /blog/o/help 试试看？
-                        <br />
-                    </center>
-                </td>
-            </tr>
-        </div>
-    </table>
-    <script>
-        var doc_command_line = document.getElementById('command_line');
-        var doc_prev_command_line = document.getElementById('prev_command_line');
-        var doc_opera = document.getElementById('opera');
-        var request = new XMLHttpRequest();
-        var requesting = 0;
-        var commands = new Array();
-        var current_command = 0;
-        doc_command_line.focus();
-        /*
-        document.onkeydown = function(e){
-            if(!e) e = window.event;
-            doc_command_line.focus();
-            if((e.keyCode || e.which) == 13){
-                go();
+        <title>ioctl.cc</title>
+        <meta name="Content-Type" content="text/html; charset=UTF-8">
+        <style type="text/css" media="screen">
+            body {background:#333;}
+            #console1 { word-wrap: break-word; }
+            /* First console */
+            #console1 { font-size: 14px }
+            #console1 div.jquery-console-inner
+            { width:100%; background:#333; padding:0.5em;}
+            #console1 div.jquery-console-prompt-box
+            { color:#fff; font-family:monospace; }
+            #console1 div.jquery-console-focus span.jquery-console-cursor
+            { background:#fefefe; color:#333; font-weight:bold }
+            #console1 div.jquery-console-message-error
+            { color:#ef0505; font-family:sans-serif; font-weight:bold;
+                padding:0.1em; }
+            #console1 div.jquery-console-message-value
+            { color:#1ad027; font-family:monospace;
+                padding:0.1em; }
+            #console1 div.jquery-console-message-error
+            { color:red; font-family:monospace;
+                padding:0.1em; }
+            #console1 div.jquery-console-message-type
+            { color:#52666f; font-family:monospace;
+                padding:0.1em; }
+            #console1 span.jquery-console-prompt-label { font-weight:bold }
+        </style>
+        <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
+        <script type="text/javascript" src="<?=SU('js/jquery.console.js')?>"></script>
+    <!-- Everything beyond this point is user-customized -->
+    <script type="text/javascript">
+      $(document).ready(function(){
+         var console1 = $('#console1');
+         var controller1  = console1.console({
+          promptLabel: '> ',
+          autofocus:true,
+          promptHistory:true,
+          commandHandle:function(line){
+            if (line) {
+              if ('CLEAR' == line.toUpperCase()) {
+                $('.jquery-console-message').remove();
+                $('.jquery-console-prompt-box').remove();
+                return [{}];
+              }
+              var res = null;
+              $.ajax({
+                  url:'/eval?q='+line,
+                  type:'get',
+                  async:false, 
+                  success:function(_res){
+                    res = _res;
+                  }
+              });
+              //$.parseJSON("{" + + "}");
+              if (0 == res.errno) {
+                return [{msg:"" + res.data, className:"jquery-console-message-value"}];
+              }
+              else {
+                return [{msg:"" + res.data, className:"jquery-console-message-error"}];
+              }
+            } else {
+              return [{}];
             }
-        }
-        */
-
-        function go() {
-            query = doc_command_line.innerText;
-            commands[ commands.length ] = query;
-            current_command = commands.length;
-            doc_command_line.innerHTML = '';
-            if (1 == requesting) {
-                return false;
+          },
+          colors: ["red","blue","green","black","yellow","white","grey"],
+          cols: 40,
+          completeHandle:function(prefix){
+            var colors = this.colors;
+            var ret = [];
+            for (var i=0;i<colors.length;i++) {
+              var color=colors[i];
+              if (color.lastIndexOf(prefix,0) === 0) {
+                ret.push(color.substring(prefix.length));
+              }
             }
-            doc_prev_command_line.innerHTML = query;
-
-            requesting = 1;
-
-            request.open('GET', '/eval?q='+query, true);
-            request.onload = function() {
-                if (request.status >= 200 && request.status < 400) {
-                    ret = eval("("+request.responseText+")");
-                    doc_opera.innerHTML = ret.data;
-                } 
-                else {
-                    alert('访问失败');
-                }
-                requesting = 0;
-                doc_command_line.innerHTML = '';
-                doc_command_line.focus();
-            };
-            request.onerror = function() {
-                alert('网络错误');
-                requesting = 0;
-                doc_command_line.innerHTML = '';
-                doc_command_line.focus();
-            };
-            request.send();
-        }
-
-        function enterIn(doc, evt) {
-            var evt=evt?evt:(window.event?window.event:null);//兼容IE和FF 
-            if (38 == evt.keyCode) {
-                if (current_command-1 >= 0) {
-                    current_command--;
-                    doc_command_line.innerHTML = commands[current_command];
-                }
-            }
-            else if (40 == evt.keyCode) {
-                if (current_command < commands.length-1) {
-                    current_command++;
-                    doc_command_line.innerHTML = commands[current_command];
-                }
-                else {
-                    current_command = commands.length;
-                    doc_command_line.innerHTML = '';
-                }
-            }
-            else if (13 == evt.keyCode) {
-                go();
-            }
-        }
+            return ret;
+          }
+         });
+       });
     </script>
+
+    </head>
+    <body>
+        <div id="console1">
+            <div class="jquery-console-message jquery-console-message-value">
+                <center>
+                    终端游戏
+                    <br />
+                    使用命令行来访问一些网站，或使用一些互联网服务；
+                    <br />
+                    命令行输入框在底部，输入 cat /blog/o/help 试试看？
+                    <br />
+                    另外，输入clear 可以清屏
+                    <br />
+                </center>
+            </div>
+        </div>
+        <noscript>
+            <p>
+            <strong>Please enable JavaScript or upgrade your browser.</strong>
+            </p>
+        </noscript>
+    </body>
 </html>
